syntax = "proto3";

package a2a;

import "google/protobuf/struct.proto";

message Message {
  string message_id = 1;
  repeated Part content = 2;
  string context_id = 3;
  string task_id = 4;
  Role role = 5;
  google.protobuf.Struct metadata = 6;
  repeated string extensions = 7;
}

message Part {
  oneof content {
    string text = 1;
    FilePart file = 2;
    DataPart data = 3;
  }
  google.protobuf.Struct metadata = 4;
}

message FilePart {
  oneof file {
    string file_with_uri = 1;
    bytes file_with_bytes = 2;
  }
  string mime_type = 3;
  string name = 4;
}

message DataPart {
  google.protobuf.Struct data = 1;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_USER = 1;
  ROLE_AGENT = 2;
}

message Task {
  string id = 1;
  string context_id = 2;
  TaskStatus status = 3;
  repeated Artifact artifacts = 4;
  repeated Message history = 5;
  google.protobuf.Struct metadata = 6;
}

message TaskStatus {
  TaskState state = 1;
  Message update = 2;
}

enum TaskState {
  TASK_STATE_UNSPECIFIED = 0;
  TASK_STATE_SUBMITTED = 1;
  TASK_STATE_WORKING = 2;
  TASK_STATE_COMPLETED = 3;
  TASK_STATE_CANCELLED = 4;
  TASK_STATE_FAILED = 5;
  TASK_STATE_INPUT_REQUIRED = 6;
  TASK_STATE_AUTH_REQUIRED = 7;
}

message Artifact {
  string artifact_id = 1;
  string name = 2;
  string description = 3;
  repeated Part parts = 4;
  google.protobuf.Struct metadata = 5;
  repeated string extensions = 6;
}

message TaskStatusUpdateEvent {
  string task_id = 1;
  string context_id = 2;
  TaskStatus status = 3;
  google.protobuf.Struct metadata = 4;
  bool final = 5;
}

message TaskArtifactUpdateEvent {
  string task_id = 1;
  string context_id = 2;
  Artifact artifact = 3;
  google.protobuf.Struct metadata = 4;
  bool append = 5;
  bool last_chunk = 6;
}

message SendMessageRequest {
  Message request = 1;
  SendMessageConfiguration configuration = 2;
  google.protobuf.Struct metadata = 3;
}

message SendMessageConfiguration {
  repeated string accepted_output_modes = 1;
  PushNotificationConfig push_notification = 2;
  int32 history_length = 3;
  bool blocking = 4;
}

message SendMessageResponse {
  oneof result {
    Task task = 1;
    Message msg = 2;
  }
}

message StreamResponse {
  oneof event {
    Message msg = 1;
    Task task = 2;
    TaskStatusUpdateEvent status_update = 3;
    TaskArtifactUpdateEvent artifact_update = 4;
  }
}

message GetTaskRequest {
  string name = 1;
  int32 history_length = 2;
}

message CancelTaskRequest {
  string name = 1;
}

message TaskSubscriptionRequest {
  string name = 1;
}

message GetAgentCardRequest {}

message GetTaskPushNotificationConfigRequest {
  string name = 1;
}

message CreateTaskPushNotificationConfigRequest {
  string parent = 1;
  string config_id = 2;
  TaskPushNotificationConfig config = 3;
}

message TaskPushNotificationConfig {
  string name = 1;
  PushNotificationConfig push_notification_config = 2;
}

message PushNotificationConfig {
  string id = 1;
  string url = 2;
  string token = 3;
  AuthenticationInfo authentication = 4;
}

message AuthenticationInfo {
  repeated string schemes = 1;
  string credentials = 2;
}

message AgentCard {
  string name = 1;
  string description = 2;
  string url = 3;
  string version = 4;
  string documentation_url = 5;
  AgentProvider provider = 6;
  AgentCapabilities capabilities = 7;
  repeated string default_input_modes = 8;
  repeated string default_output_modes = 9;
  repeated AgentSkill skills = 10;
  repeated Security security = 11;
  map<string, SecurityScheme> security_schemes = 12;
  bool supports_authenticated_extended_card = 13;
  string preferred_transport = 14;
  string protocol_version = 15;
  repeated AgentInterface additional_interfaces = 16;
  repeated AgentCardSignature signatures = 17;
}

message AgentProvider {
  string organization = 1;
  string url = 2;
}

message AgentCapabilities {
  bool streaming = 1;
  bool push_notifications = 2;
  repeated AgentExtension extensions = 3;
}

message AgentExtension {
  string uri = 1;
  string description = 2;
  google.protobuf.Struct params = 3;
  bool required = 4;
}

message Security {
  map<string, StringList> schemes = 1;
}

message StringList {
  repeated string list = 1;
}

message SecurityScheme {
  oneof scheme {
    APIKeySecurityScheme api_key_security_scheme = 1;
    HTTPAuthSecurityScheme http_auth_security_scheme = 2;
    OAuth2SecurityScheme oauth2_security_scheme = 3;
    MutualTLSecurityScheme mtls_security_scheme = 4;
    OpenIdConnectSecurityScheme open_id_connect_security_scheme = 5;
  }
}

message APIKeySecurityScheme {
  string description = 1;
  string name = 2;
  string location = 3;
}

message HTTPAuthSecurityScheme {
  string description = 1;
  string scheme = 2;
  string bearer_format = 3;
}

message OAuth2SecurityScheme {
  string description = 1;
  OAuthFlows flows = 2;
}

message OAuthFlows {
  oneof flow {
    AuthorizationCodeOAuthFlow authorization_code = 1;
    ClientCredentialsOAuthFlow client_credentials = 2;
    ImplicitOAuthFlow implicit = 3;
    PasswordOAuthFlow password = 4;
  }
}

message AuthorizationCodeOAuthFlow {
  string authorization_url = 1;
  string token_url = 2;
  string refresh_url = 3;
  map<string, string> scopes = 4;
}

message ClientCredentialsOAuthFlow {
  string token_url = 1;
  string refresh_url = 2;
  map<string, string> scopes = 3;
}

message ImplicitOAuthFlow {
  string authorization_url = 1;
  string refresh_url = 2;
  map<string, string> scopes = 3;
}

message PasswordOAuthFlow {
  string token_url = 1;
  string refresh_url = 2;
  map<string, string> scopes = 3;
}

message MutualTlsSecurityScheme {
  string description = 1;
}

message OpenIdConnectSecurityScheme {
  string description = 1;
  string open_id_connect_url = 2;
}

message AgentSkill {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated string tags = 4;
  repeated string examples = 5;
  repeated string input_modes = 6;
  repeated string output_modes = 7;
}

message AgentInterface {
  string transport = 1;
  string url = 2;
}

message AgentCardSignature {
  string protected = 1;
  string signature = 2;
  google.protobuf.Struct header = 3;
}

service A2AService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc SendStreamingMessage(SendMessageRequest) returns (stream StreamResponse);
  rpc GetTask(GetTaskRequest) returns (Task);
  rpc CancelTask(CancelTaskRequest) returns (Task);
  rpc TaskSubscription(TaskSubscriptionRequest) returns (stream StreamResponse);
  rpc GetAgentCard(GetAgentCardRequest) returns (AgentCard);
  rpc GetTaskPushNotificationConfig(GetTaskPushNotificationConfigRequest) returns (TaskPushNotificationConfig);
  rpc CreateTaskPushNotificationConfig(CreateTaskPushNotificationConfigRequest) returns (TaskPushNotificationConfig);
}
